Astra-57-Fixed project linking issues and reinstated majority of example.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .vs/
 .git/
 bin/
+bin-int/
 *.obj
-Dependencies/Astra.Core/
-Astra.Core/intermediates/
-!Astra.Core/src/resources/*.obj
+!Astra/res/*.obj
+!TestGame/res/*.obj
