--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -148,7 +148,11 @@
       <AdditionalLibraryDirectories>vendor\GLEW\lib;vendor\GLFW\lib;vendor\OpenALSoft\lib;vendor\FreeType\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
     <PostBuildEvent>
-      <Command>IF EXIST vendor\OpenALSoft\lib\OpenAL32.dll\ (xcopy /Q /E /Y /I vendor\OpenALSoft\lib\OpenAL32.dll ..\bin\windows-Dist-x86\TestGame &gt; nul) ELSE (xcopy /Q /Y /I vendor\OpenALSoft\lib\OpenAL32.dll ..\bin\windows-Dist-x86\TestGame &gt; nul)</Command>
+      <Command>IF EXIST vendor\OpenALSoft\lib\OpenAL32.dll\ (xcopy /Q /E /Y /I vendor\OpenALSoft\lib\OpenAL32.dll ..\bin\windows-Dist-x86\TestGame &gt; nul) ELSE (xcopy /Q /Y /I vendor\OpenALSoft\lib\OpenAL32.dll ..\bin\windows-Dist-x86\TestGame &gt; nul)
+IF EXIST res\shaders\**.shader\ (xcopy /Q /E /Y /I res\shaders\**.shader ..\bin\windows-Dist-x86\TestGame\res\shaders &gt; nul) ELSE (xcopy /Q /Y /I res\shaders\**.shader ..\bin\windows-Dist-x86\TestGame\res\shaders &gt; nul)
+IF EXIST res\textures\**.png\ (xcopy /Q /E /Y /I res\textures\**.png ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul) ELSE (xcopy /Q /Y /I res\textures\**.png ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul)
+IF EXIST res\textures\**.jpg\ (xcopy /Q /E /Y /I res\textures\**.jpg ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul) ELSE (xcopy /Q /Y /I res\textures\**.jpg ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul)
+IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Dist-x86\TestGame\res\fonts &gt; nul) ELSE (xcopy /Q /Y /I res\fonts\**.ttf ..\bin\windows-Dist-x86\TestGame\res\fonts &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
