--- a/TestGame/TestGame.vcxproj
+++ b/TestGame/TestGame.vcxproj
@@ -139,6 +139,8 @@
       <Command>IF EXIST res\**.obj\ (xcopy /Q /E /Y /I res\**.obj ..\bin\windows-Dist-x86\TestGame\res &gt; nul) ELSE (xcopy /Q /Y /I res\**.obj ..\bin\windows-Dist-x86\TestGame\res &gt; nul)
 IF EXIST res\textures\**.png\ (xcopy /Q /E /Y /I res\textures\**.png ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul) ELSE (xcopy /Q /Y /I res\textures\**.png ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul)
 IF EXIST res\textures\**.jpg\ (xcopy /Q /E /Y /I res\textures\**.jpg ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul) ELSE (xcopy /Q /Y /I res\textures\**.jpg ..\bin\windows-Dist-x86\TestGame\res\textures &gt; nul)
+IF EXIST res\textures\Default_Night_Skybox\**.png\ (xcopy /Q /E /Y /I res\textures\Default_Night_Skybox\**.png ..\bin\windows-Dist-x86\TestGame\res\textures\Default_Night_Skybox &gt; nul) ELSE (xcopy /Q /Y /I res\textures\Default_Night_Skybox\**.png ..\bin\windows-Dist-x86\TestGame\res\textures\Default_Night_Skybox &gt; nul)
+IF EXIST res\textures\Default_Skybox\**.png\ (xcopy /Q /E /Y /I res\textures\Default_Skybox\**.png ..\bin\windows-Dist-x86\TestGame\res\textures\Default_Skybox &gt; nul) ELSE (xcopy /Q /Y /I res\textures\Default_Skybox\**.png ..\bin\windows-Dist-x86\TestGame\res\textures\Default_Skybox &gt; nul)
 IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Dist-x86\TestGame\res\fonts &gt; nul) ELSE (xcopy /Q /Y /I res\fonts\**.ttf ..\bin\windows-Dist-x86\TestGame\res\fonts &gt; nul)
 IF EXIST res\audio\**.wav\ (xcopy /Q /E /Y /I res\audio\**.wav ..\bin\windows-Dist-x86\TestGame\res\audio &gt; nul) ELSE (xcopy /Q /Y /I res\audio\**.wav ..\bin\windows-Dist-x86\TestGame\res\audio &gt; nul)</Command>
     </PostBuildEvent>
