--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -153,6 +153,8 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\Application.h" />
     <ClInclude Include="src\Astra\Core.h" />
     <ClInclude Include="src\Astra\EntryPoint.h" />
+    <ClInclude Include="src\Astra\graphics\renderers\SelectionRenderer.h" />
+    <ClInclude Include="src\Astra\graphics\shaders\BasicEntityShader.h" />
     <ClInclude Include="src\Astra\Log.h" />
     <ClInclude Include="src\Astra\math\MathsDefines.h" />
     <ClInclude Include="src\Astra\math\MathsFuncs.h" />
@@ -275,6 +277,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp" />
+    <ClCompile Include="src\Astra\graphics\renderers\SelectionRenderer.cpp" />
     <ClCompile Include="src\Astra\Log.cpp" />
     <ClCompile Include="src\Astra\audio\AudioController.cpp" />
     <ClCompile Include="src\Astra\audio\AudioSource.cpp" />
@@ -347,6 +350,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
   </ItemGroup>
   <ItemGroup>
     <None Include="res\fonts\calibri.ttf" />
+    <None Include="res\shaders\BasicEntity.shader" />
     <None Include="res\shaders\Bloom.shader" />
     <None Include="res\shaders\Contrast.shader" />
     <None Include="res\shaders\Entity.shader" />
