--- a/Astra/Astra.vcxproj.filters
+++ b/Astra/Astra.vcxproj.filters
@@ -465,6 +465,10 @@
     <ClInclude Include="vendor\stb_image\stb_image\stb_image.h">
       <Filter>vendor\stb_image\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Astra\math\MathsDefines.h" />
+    <ClInclude Include="src\Astra\math\MathsFuncs.h" />
+    <ClInclude Include="src\Astra\graphics\renderers\SelectionRenderer.h" />
+    <ClInclude Include="src\Astra\graphics\shaders\BasicEntityShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp">
@@ -671,6 +675,7 @@
     <ClCompile Include="vendor\stb_image\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\Astra\graphics\renderers\SelectionRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\fonts\calibri.ttf">
@@ -730,6 +735,7 @@
     <None Include="vendor\dr_lib\dr_lib\README.md">
       <Filter>vendor\dr_lib\dr_lib</Filter>
     </None>
+    <None Include="res\shaders\BasicEntity.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\Color_Palette.png">
